--- a/research.html
+++ b/research.html
@@ -1,4 +1,11 @@
-I am an economic, cultural, and political sociologist and criminologist. 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>research</title>
+</head>
+<body>
+  <p>I am an economic, cultural, and political sociologist and criminologist. 
 I ask questions related to foundational concepts in these disciplines in two main overlapping areas. 
 Both relate to the reproduction of inequality. 
 1) I ask questions related to white-collar crime, corruption, and institutional failure. 
@@ -10,4 +17,6 @@ Thus, I consider myself a mixed methods researcher committed to epistemological 
 However, this is not a completely relativistic enterprise. Certain questions are better to ask than others. 
 And based on the best questions we can ask, some methods are better equipped to provide those answers. 
 This necessarily includes both qualitative and quantitative methods. 
-The best sociologists need to have an open mind to the ever evolving landscape of methodological tools available to them, and I love to learn about those new tools.
+The best sociologists need to have an open mind to the ever evolving landscape of methodological tools available to them, and I love to learn about those new tools.</p>
+</body>
+</html>
