--- a/research.html
+++ b/research.html
@@ -1,3 +1,7 @@
+# phd candidate and instructor in sociology at NC State
+
+[home](adamjgoldfarb.github.io) [research](/research.html) [teaching](/teaching.html) [cv](goldfarbCV.pdf)
+
 <!DOCTYPE html>
 <html>
 <head>
