--- a/research.html
+++ b/research.html
@@ -5,6 +5,8 @@
   <title>research</title>
 </head>
 <body>
+  <h1>research statement</h1>
+<body>
   <p>I am an economic, cultural, and political sociologist and criminologist. 
 I ask questions related to foundational concepts in these disciplines in two main overlapping areas. 
 Both relate to the reproduction of inequality. 
